--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -38,6 +38,8 @@ url                    = "/code/"
 include_rss            = true                          # include RSS <link> tag in <head> and show RSS icon
 latestpostscount       = 5                             # how many posts to display on the home page
 i18n_flags             = false                         # whether to display small country flags for available translations
+tracking_pixel         = false
+privacy_link           = ""
 author                 = "Arthur Dent"
 cachebuster            = true                          # add the current unix timestamp in query string for cache busting css assets
 dateform               = "Jan 2, 2006"
